--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "pg": "^8.11.3"
   },
   "engines": {
-    "node": "16.x" // Versão do Node.js compatível com o Render
+    "node": "16.x"
   }
 }
