--- a/Package.json
+++ b/Package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
       "start": "node server.js",
-      "dev": "nodemon server.js"
+      "dev": "nodemon server.js",
+     "build": "npm install"
     },
     "dependencies": {
       "bcrypt": "^5.1.0",
@@ -18,4 +19,6 @@
     "devDependencies": {
       "nodemon": "^3.0.1"
     }
+
+
   }
